# dirigent

./: .dockerignore  .gitattributes  .gitignore  .golangci.yaml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  docker-compose.yml  go.mod  go.sum  readme.md
analysis/: max_tp.cpp
api/: control_plane_api_server.go  controller.go  controller_test.go  cp_api_server.go  cp_storage.go  data_plane_api_server.go  dp_api_server.go  k8s_placement.go  k8s_placement_test.go  policies.go  registration_server.go  resource_map.go  wn_api_server.go  worker_node_api_server.go
architecture/: architecture.drawio  architecture_v2.drawio
artifact_evaluation/: .gitignore  README.md  experiment_order.md  how_to_start_maestro_cluster.md  plot_azure_500.py  plot_cold_start_sweep.py  run_plotting_scripts.sh
async/: fire.go
clients/: async_client.go  sync_client.go
cni-issue/: main.go
common/: grpc_helpers.go  hardware.go  hardware_usage.go  metadata_test.go  tracing.go
configs/: check_apiserver.sh  cni.conf  fcnet.conflist  haproxy.cfg  keepalived.conf  microvm-kernel-x86_64-6.1.config  substitute_interface.sh
cpp_legacy/tests/: CMakeLists.txt  main.cpp
data_plane/: .gitignore  Makefile  data_plane.go  go.mod  go.sum  install.sh  request_buffer.go
docs/: firecracker.md
mock/: mock_persistence.go
proto/: common.pb.go  common.proto  control_plane_interface.pb.go  control_plane_interface.proto  control_plane_interface_grpc.pb.go  data_plane_interface.pb.go  data_plane_interface.proto  data_plane_interface_grpc.pb.go  raft.pb.go  worker_node_interface.pb.go  worker_node_interface.proto  worker_node_interface_grpc.pb.go
proxy/: load_balancing.go  server_test.go
sandbox/: docker_iface_test.go  iptables.go
scripts/: add_auth_token.sh  add_ssh_key.sh  azure.sh  cdf.py  collect_resource_monitoring.sh  common.py  common.sh  create_image.sh  deploy_registry.sh  dirigent_metadata_csv_to_json.py  latency_breakdown.py  latency_breakdown_burst.py  measure_async.sh  (+24 more)
workload/dandelion_busy_loop/: .gitignore  CMakeLists.txt  main.c
(+685 files in other folders)
